Fix status line for idle and streaming
Was not showing after the changes to failed status bar.

--- a/web-app/resources/less/layout/room-jam.less
+++ b/web-app/resources/less/layout/room-jam.less
@@ -47,9 +47,11 @@
       height: 100%;
       border-radius: 1.5rem;
       &.idle {
+        top: -5px;
         border-top: 5px @status-linked solid;
       }
       &.streaming {
+        top: -5px;
         border-top: 5px @status-in-room solid;
       }
       &.failed {
